deploy/k8s/app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: totem-pedidos
  labels:
    name: totem-pedidos
