deploy/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: totem-pedidos-service
  namespace: totem-pedidos
  labels:
    app: totem-pedidos
spec:
  selector:
    app: totem-pedidos
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
